--- a/index.html
+++ b/index.html
@@ -1,3 +1,47 @@
 <html>
-  test1
+<body>
+ <button id="generate" onclick="gen()">Generate</button>
+ <button id="sort" onclick="mySort()">Sort</button>
+ <canvas id="Canvas1" width="800" height="400"></canvas>
+<script>
+var c1 = document.getElementById("Canvas1");
+var ct1 = c1.getContext("2d");
+var arr=[1,2,3,4,5,6,7,8]
+ct1.font="18px Monospace"
+display()
+var count=0
+ 
+function gen(){
+  for(i=0;i<8;i++){
+    arr[i]=Math.floor(Math.random()*10)
+  }
+  display()
+}
+function display(){
+  ct1.clearRect(0,0,800,800)
+  for(i=0;i<8;i++){
+    ct1.fillText(arr[i],50+60*i,100)
+  }
+}
+function mySort(){
+ count=0
+ sorting()
+}
+function sorting(){
+  sorted=true
+  count++
+  for (i=0;i<7;i++){
+    if(arr[i]>arr[i+1]){
+      sorted=false
+      temp=arr[i]
+      arr[i]=arr[i+1]
+      arr[i+1]=temp
+    }
+  }
+  display()
+  if(sorted==false){ setTimeout(sorting,30) }
+  else{alert("steps= "+count)}
+}
+</script>
+</body>
 </html>
