--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ function gen(){
 function display(){
   ct1.clearRect(0,0,800,800)
   for(i=0;i<8;i++){
-    ct1.fillText(arr[i],50+60*i,200)
+    ct1.fillText(arr[i],50+60*i,80)
+   ct1.fillRect(30+60*i,100,40,50)
   }
 }
 function mySort(){
