--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function display(){
   ct1.clearRect(0,0,800,800)
   for(i=0;i<8;i++){
     ct1.fillText(arr[i],50+60*i,80)
-   ct1.fillRect(30+60*i,100,40,50)
+   ct1.fillRect(30+60*i,100,40,arr[i]*20)
   }
 }
 function mySort(){
