--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ var count=0
  
 function gen(){
   for(i=0;i<8;i++){
-    arr[i]=Math.floor(Math.random()*10)
+    arr[i]=Math.floor(Math.random()*10 +1)
   }
   display()
 }
