--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 var c1 = document.getElementById("Canvas1");
 var ct1 = c1.getContext("2d");
 var arr=[1,2,3,4,5,6,7,8]
+var result=[0,0,0,0,0,0,0,0,0,0]
 ct1.font="18px Monospace"
 display()
 var count=0
@@ -41,8 +42,17 @@ function sorting(){
   }
   display()
   if(sorted==false){ setTimeout(sorting,300) }
-  else{alert("steps= "+count)}
+  else{result[count]++
+       setTimeout(results,1000)
+        
+     }
+ 
 }
+ function results(){
+  alert(results)
+  gen()
+  mySort()
+ }
 </script>
 </body>
 </html>
