--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
 <body>
- <button id="generate" onclick="gen()">Generate</button>
- <button id="sort" onclick="mySort()">Sort</button>
  <canvas id="Canvas1" width="800" height="400"></canvas>
 <script>
 var c1 = document.getElementById("Canvas1");
 var ct1 = c1.getContext("2d");
 var arr=[1,2,3,4,5,6,7,8]
 var result=[0,0,0,0,0,0,0,0,0,0]
+var loops=100,lp=0
 ct1.font="18px Monospace"
 display()
 var count=0
@@ -27,6 +26,7 @@ function display(){
 }
 function mySort(){
  count=0
+ lp++
  sorting()
 }
 function sorting(){
@@ -50,9 +50,13 @@ function sorting(){
 }
  function results(){
   alert(result)
-  gen()
-  mySort()
+  if(lp<loops){
+    gen()
+    mySort()
+  }
  }
+ gen()
+ mySort()
 </script>
 </body>
 </html>
