--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ function sorting(){
  
 }
  function results(){
-  alert(result)
   if(lp<loops){
     gen()
     mySort()
   }
+ else{ alert(result)}
  }
  gen()
  mySort()
