--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ function gen(){
 }
 function display(){
   ct1.clearRect(0,0,800,800)
-  st1.fillText(lp,0,30)
+  ct1.fillText(lp,0,30)
   for(i=0;i<8;i++){
     ct1.fillText(arr[i],50+60*i,80)
    ct1.fillRect(30+60*i,100,40,arr[i]*20)
