--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </select>
   <label for="speed" style="font-size: 3vw">Speed:</label>
   <select id="speed" style="font-size: 3vw">
-    <option value="med">600</option>
-    <option value="fast">200</option>
-    <option value="slow">1200</option>
+    <option value="600">med</option>
+    <option value="200">fast</option>
+    <option value="1200">slow</option>
   </select> 
   <br> <br>
  <button id="generate" onclick="gen()" style="font-size: 3vw">Generate</button>
