--- a/index.html
+++ b/index.html
@@ -118,18 +118,18 @@ function insertSort(i){
    else{ break }
   }
  // slide from check+1 to i
-
-  for(let z=0;z<7;z++){ 
-      copy[z]=JSON.parse( JSON.stringify(arr) )
-      copy[z][check].y=copy[z][check].y*z/6
-      if(z<6){copy[z][check].col=checkCol}
-      for(let slide=check+1; slide<=i; slide++){
-        copy[z][slide].x-=boxWidth*(6-z)/7
-      }
-      setTimeout(function(){
-       display(copy[z]) },(1+.1*z)*delay)      
+  if(i!=check){
+   for(let z=0;z<7;z++){ 
+       copy[z]=JSON.parse( JSON.stringify(arr) )
+       copy[z][check].y=copy[z][check].y*z/6
+       if(z<6){copy[z][check].col=checkCol}
+       for(let slide=check+1; slide<=i; slide++){
+         copy[z][slide].x-=boxWidth*(6-z)/7
+       }
+       setTimeout(function(){
+        display(copy[z]) },(1+.1*z)*delay)      
+   }
   }
-  
   setTimeout(function(){ insertSort(i+1) }, 2*delay)
 }
 
