--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function gen(){
  delay=+(speedDelay.value)
  if(size==9){
   for(i=0;i<size;i++){
-   arr[i]={val: i+1,
+   arr[i]={val: 9-i,
            x: boxWidth*(i+1),
            y: Math.floor(.2*canHeight),
            col: initCol
