--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+  <input type="checkbox" id="bar">
+  <label for="bar">Bar/label>
  <canvas id="Canvas1"></canvas>
  <br>
  <label for="algorithm" style="font-size: 3vw">Algorithm:</label>
