--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
   <button id="sort" onclick="oneSort()" style="font-size: 4vw">Sort</button>
   <input type="checkbox" id="bar" style="font-size: 3vw">
-  <label for="bar">Bar</label>
+  <label for="bar" style="font-size: 3vw">Bar</label>
  <canvas id="Canvas1"></canvas>
  <br>
  <label for="algorithm" style="font-size: 3vw">Algorithm:</label>
