--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-  <button id="sort" onclick="oneSort()" style="font-size: 4vw">Sort</button>
+  <button id="sort" onclick="oneSort()" style="font-size: 4vw">
+     <img src="play150.png">
+  </button>
   <input type="checkbox" id="bar" style="font-size: 3vw">
   <label for="bar" style="font-size: 3vw">Bar</label>
  <canvas id="Canvas1"></canvas>
