--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <button id="sort" onclick="oneSort()" style="font-size: 4vw">
+  <button id="sort" onclick="oneSort()" style="width: 5vw">
      <img src="play150.png">
   </button>
   <input type="checkbox" id="bar" style="font-size: 3vw">
