--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <button id="sort" onclick="oneSort()">
-     <img src="play100.png"  style="width: 5%; height: auto;">
+     <img src="play100.png"  style="width: 4vw; height: 4vh;">
   </button>
   <input type="checkbox" id="bar" style="font-size: 3vw">
   <label for="bar" style="font-size: 3vw">Bar</label>
