--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   </button>
   <button id="stop" onclick="stopSort()" style="width: 4vw; height: 4vh; background-color: red;"
     </button>
+  
+  <select id="algorithm" style="font-size: 3vw">
+    <option value="Bubble Sort">Bubble</option>
+    <option value="Insertion Sort">Insertion</option>
+    <option value="Selection Sort">Selection</option>
+  </select>
   <input type="checkbox" id="bar" style="font-size: 3vw">
   <label for="bar" style="font-size: 3vw">Bar</label>
  <canvas id="Canvas1"></canvas>
  <br>
- <label for="algorithm" style="font-size: 3vw">Algorithm:</label>
-  <select id="algorithm" style="font-size: 3vw">
-    <option value="Bubble">Bubble</option>
-    <option value="Insertion">Insertion</option>
-    <option value="Selection">Selection</option>
-  </select>
+
  <label for="setsize" style="font-size: 3vw">Set size:</label>
   <select id="setsize" style="font-size: 3vw">
     <option value="6">6</option>
