--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <button id="sort" onclick="oneSort()">
      <img src="play100.png"  style="width: 4vw; height: 4vh;">
   </button>
-  <button id="stop" onclick="stopSort()" style="width: 4vw; height: 4vh; background-color: red;"
+  <button id="stop" onclick="stopSort()">
+     <img src="stop 100.png"style="width: 4vw; height: 4vh;">
     </button>
-  
+  <br>
   <select id="algorithm" style="font-size: 3vw">
     <option value="Bubble Sort">Bubble</option>
     <option value="Insertion Sort">Insertion</option>
