--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <button id="stop" onclick="stopSort()">
      <img src="stop100.png" style="width: 4vw; height: 4vh;">
     </button>
-  <br>
-  <select id="algorithm" style="font-size: 3vw">
-    <option value="Bubble Sort">Bubble</option>
-    <option value="Insertion Sort">Insertion</option>
-    <option value="Selection Sort">Selection</option>
-  </select>
- <br>
- <input type="checkbox" id="bar" style="font-size: 3vw">
+   <input type="checkbox" id="bar" style="font-size: 3vw">
  <label for="bar" style="font-size: 3vw">Bar</label>
+  
+  <select id="algorithm" style="font-size: 3vw">
+    <option value="Bubble">Bubble Sort</option>
+    <option value="Insertion">Insertion Sort</option>
+    <option value="Selection">Selection Sort</option>
+  </select>
+
  <br>
  <canvas id="Canvas1"></canvas>
  <br>
