--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <button id="stop" onclick="stopSort()">
      <img src="stop100.png" style="width: 4vw; height: 4vh;">
     </button>
+  <button id="last">
+     <img src="last100.png" style="width: 4vw; height: 4vh;">
+    </button>
+  <button id="next">
+     <img src="next100.png" style="width: 4vw; height: 4vh;">
+    </button>
   
   <select id="algorithm" style="font-size: 3vw">
     <option value="Bubble">Bubble Sort</option>
