--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@ function display(item){
     }
     else{
       ct1.fillText(item[i].val,item[i].x,item[i].y)
+      ct1.beginPath();
+      ct1.arc(item[i].x, item[i].y, radius, 0, 6.29, false);
+      ct1.fill();
+      ct1.lineWidth = 2;
+      ct1.stroke();
     }
   }
 }
