--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ function swap(a,b){
   }
 function finish(){
   display(arr)
+  ct1.font="3vw Monospace"
   ct1.fillText("Sorted",.5*c1.width,.1*c1.height)
   working(false)
 }
