--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@ var c1 = document.getElementById("Canvas1")
 var ct1 = c1.getContext("2d")
 var canWidth=window.innerWidth, canHeight= window.innerHeight
 c1.width=Math.floor(.95*canWidth)
-c1.height=Math.floor(.6*canHeight)
+c1.height=Math.floor(.7*canHeight)
 var boxWidth=Math.floor(.07*canWidth)
-var scale=Math.floor(.03*canHeight)
  
 const choiceAlg=document.getElementById('algorithm')
 const choiceSize=document.getElementById('setsize')
@@ -74,7 +73,7 @@ function gen(){
   for(i=0;i<size;i++){
    arr[i]={val: 9-i,
            x: boxWidth*(i+1),
-           y: Math.floor(.45*canHeight),
+           y: Math.floor(.3*canHeight),
            col: initCol[i%2]
           }
   }
@@ -83,7 +82,7 @@ function gen(){
    for(i=0;i<size;i++){
     arr[i]={val: Math.floor(1+Math.random()*9),
             x: boxWidth*(i+1),
-            y: Math.floor(.45*canHeight),
+            y: Math.floor(.3*canHeight),
             col: initCol[i%2]
            }
    }
@@ -102,7 +101,7 @@ function display(item){
   for(i=0;i<size;i++){
     ct1.fillStyle=item[i].col
     if(chartType==1){
-     ct1.fillRect(item[i].x,item[i].y,.9*boxWidth,-scale*item[i].val)
+     ct1.fillRect(item[i].x,item[i].y,.9*boxWidth,-.02*canHeight*item[i].val)
     }
     else{
       ct1.beginPath();
