--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
  <label for="setsize" style="font-size: 3vw">Set size:</label>
   <select id="setsize" style="font-size: 3vw">
-    <option value="6">6</option>
-    <option value="8">8</option>
-    <option value="10">10</option>
-    <option value="9">9R</option>
+    <option value="6">6Random</option>
+    <option value="8">8Random</option>
+    <option value="10">10Random</option>
+    <option value="9">9Reverse</option>
   </select>
   <label for="speed" style="font-size: 3vw">Speed:</label>
   <select id="speed" style="font-size: 3vw">
