--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <select id="setsize" style="font-size: 3vw">
     <option value="6">6Random</option>
     <option value="8">8Random</option>
-    <option value="10">10Random</option>
-    <option value="9">9Reverse</option>
+    <option value="7">7User</option>
+    <option value="9">9Decrease</option>
   </select>
   <label for="speed" style="font-size: 3vw">Speed:</label>
   <select id="speed" style="font-size: 3vw">
@@ -85,6 +85,7 @@ function gen(){
             y: Math.floor(.3*canHeight),
             col: initCol[i%2]
            }
+     if(size==7){arr[i].val=prompt("Enter item "+(i+1) }
    }
  }
   steps=0
