--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <option value="6">6Random</option>
     <option value="8">8Random</option>
     <option value="7">7User</option>
-    <option value="9">9Decrease</option>
+    <option value="9">9Down</option>
   </select>
   <label for="speed" style="font-size: 3vw">Speed:</label>
   <select id="speed" style="font-size: 3vw">
@@ -85,7 +85,7 @@ function gen(){
             y: Math.floor(.3*canHeight),
             col: initCol[i%2]
            }
-     if(size==7){arr[i].val=prompt("Enter item "+(i+1) }
+     if(size==7){arr[i].val=prompt("Enter item "+(i+1) ) }
    }
  }
   steps=0
