--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <option value="Selection">Selection Sort</option>
   </select>
   <button id="barchart">
-     <img src="bar100.png" onclick="chart()" style="width: 6vw; height: 6vh;">
+     <img src="slide100.png" onclick="chart()" style="width: 10vw; height: 6vh;">
   </button>
   <button id="generate" onclick="gen()">
      <img src="gen100.png" style="width: 6vw; height: 6vh;">
